pushing from work comp to home, last time before live

--- a/public_html/blogposts/01_whybuilt.html
+++ b/public_html/blogposts/01_whybuilt.html
@@ -12,6 +12,7 @@
 	    <link href="../../roark/bootstrap/css/bootstrap.css" rel="stylesheet">
 	    <link href="../../roark/fontawesome/css/font-awesome.css" rel="stylesheet">
 	    <link href="../style.css" rel="stylesheet">
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700,900,500' rel='stylesheet' type='text/css'>
 	    <style type="text/css"></style>
 
 	    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -54,7 +55,7 @@
     <div class="blogPostBody">
         <div class="container">
         	<p>
-          		Blog body
+          		I have been working on D3 and Python for a while now on both my work and personal computers. Because of both of these reasons, some projects have been lost, others forgotten about. It's hard to remember all that has been done. I thought building a site to act as a sort of repository would help this problem I had. Solving problems is why we code. So I am going to use this site as a reference for future projects, and I hope others can as well. 
         	</p>
       	</div>
     </div>
@@ -62,7 +63,7 @@
 
     <div class="container">
         <div class="backtoblog">
-          	<a href="blog2.html">Back to list of posts</a>
+          	<a href="blog2.html">Back to blog posts</a>
         </div>
 
         <ul id="social">
