--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -12,6 +12,7 @@
 	    <link href="../roark/bootstrap/css/bootstrap.css" rel="stylesheet">
 	    <link href="../roark/fontawesome/css/font-awesome.css" rel="stylesheet">
 	    <link href="style.css" rel="stylesheet">
+	    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700,900,500' rel='stylesheet' type='text/css'>
 	    <style type="text/css"></style>
     
 	    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -55,8 +56,8 @@
 		                  		<a href="projects/sentimentBubbleJim/sentimentBubbleJim.html"><img src="../projects/img_tiles/sentimentBubbleTile.JPG" alt=""></a>
 		                  	</div>
 	              			<div class="caption">
-	                			<h3>Work 1</h3>
-	                			<p class="projectdescription">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+	                			<h3>showing sentiment</h3>
+	                			<p class="projectdescription">I was trying to show sentiment in a different way other than just three bar charts, especially because different topics come together to make up each sentiment bin.</p>
 	                			<p><a href="projects/sentimentBubbleJim/sentimentBubbleJim.html">Read more</a></p>
 	              			</div>
 	                	</div>
@@ -67,8 +68,8 @@
 		                  		<a href="projects/whyShouldLearnD3.html"><img src="../projects/img_tiles/d3why.JPG" alt="" style="padding-top:50px"></a>
 		                  	</div>
 	                 		<div class="caption">
-	                    		<h3>Work 2</h3>
-	                    		<p class="projectdescription">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+	                    		<h3>why you should learn d3</h3>
+	                    		<p class="projectdescription">I gave this quick, five minute presentation to the Analytics department trying to show the benefits and fun of learning D3.</p>
 	                    		<p><a href="projects/whyShouldLearnD3.html">Read more</a></p>
 	                  		</div>
 	                	</div>
@@ -79,8 +80,8 @@
 		                  		<a href="projects/innovationProjectPresentation.html"><img src="../projects/img_tiles/InnovationProjectTile.JPG" alt=""></a>
 		                  	</div>
 	                  		<div class="caption">
-	                    		<h3>Work 3</h3>
-	                    		<p class="projectdescription">Created for an innovation project at R/GA.</p>
+	                    		<h3>R/GA innovation project</h3>
+	                    		<p class="projectdescription">A presentation for work I did which covered using Twitter's streaming API to obtain and store tweets in a Postgres db and then trying to assign sentiment to each tweet.</p>
 	                    		<p><a href="projects/innovationProjectPresentation.html">Read more</a></p>
 	                  		</div>
 	                	</div>
@@ -96,8 +97,8 @@
 		                  		<a href="projects/miniDealerVisitsInfographic.html"><img src="../projects/MINIslides/MINI_Dealer_Visits_2011_test.JPG" alt=""></a>
 		                  	</div>
 	              			<div class="caption">
-	                			<h3>Main graphic</h3>
-	                			<p class="projectdescription"> I made this as an infographic for MINI dealers to look at and sitribute amongst themselves. It was used as a poster in the meetings.</p>
+	                			<h3>inforgraphic for MINI dealers</h3>
+	                			<p class="projectdescription"> I made this infographic for MINI dealers to look at and sitribute amongst themselves. It was used as a poster in the meetings.</p>
 	                			<p><a href="projects/miniDealerVisitsInfographic.html">Read more</a></p>
 	              			</div>
 	                	</div>
@@ -108,8 +109,8 @@
 		                  		<a href="projects/mini_US_AG.html"><img src="../projects/MINIslides/MINI_AG_US_thumbnail.JPG" alt=""></a>
 		                  	</div>
 	                 		<div class="caption">
-	                    		<h3>Work 2</h3>
-	                    		<p class="projectdescription">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+	                    		<h3>conclusion, slide one</h3>
+	                    		<p class="projectdescription">This slide was used as the first of two slides in the conclusion of the presentation for MINI's global business.</p>
 	                    		<p><a href="projects/mini_US_AG.html">Read more</a></p>
 	                  		</div>
 	                	</div>
@@ -120,8 +121,8 @@
 		                  		<a href="projects/mini_SF_AG.html"><img src="../projects/MINIslides/SFMINI_thumbnail.jpg" alt="" class="projectImageResize"></a>
 		                  	</div>
 	                  		<div class="caption">
-	                    		<h3>Work 3</h3>
-	                    		<p class="projectdescription">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+	                    		<h3>conclusion, slide two</h3>
+	                    		<p class="projectdescription">My favorite of the two slides, this was intended to show the fact that San Francisco has just as much culture as European cities. I moved to Sf for this reason, so was cool to try to visualize.</p>
 	                    		<p><a href="projects/mini_SF_AG.html">Read more</a></p>
 	                  		</div>
 	                	</div>
@@ -136,7 +137,7 @@
 	                  		<a href="projects/presentingDataBssp.html"><img src="../projects/project_img/presentingdatabssp.jpg" alt="" class="projectImageResize"></a>
 	              			<div class="caption">
 	                			<h3>Presentation: Presenting Data and Information</h3>
-	                			<p class="projectdescription">Gave a presentation on how to effectively present data. Based heavily on Edward Tufte's principles.</p>
+	                			<p class="projectdescription">I gave this presentation a few years ago showing how to effectively present data. Based heavily on Edward Tufte's principles.</p>
 	                			<p><a href="projects/presentingDataBssp.html">Read more</a></p>
 	              			</div>
 	                	</div>
