--- a/public_html/projects/innovationProjectPresentation.html
+++ b/public_html/projects/innovationProjectPresentation.html
@@ -48,8 +48,7 @@
     <div class="projectDescription">
         <div class="container">
         	<p>
-          		Got to do really fun things like put an Oscar Wilde quote in because I love Oscar Wilde.
-          		Click on the image to go to the presentation.
+          		I did a fair bit of work for an innovation project in December 2012. My goal was to use Twitter's streaming API to stream tweets into my Postgres database. I then wanted to assign sentiment to each tweet. I then wanted to compare my results to those of Netbase to see how accurate my results were. My thought was I then could do similar exercises for data which is not in Netbase and so this would be the only way to assign sentiment. It was interesting to see how software like Netbase actually works. I learned it depends 100% on your training corpus. My next challenge is to assign sentiment using better nlp practices, like trigrams, instead of using a naive process using probability.
         	</p>
       	</div>
     </div>
