--- a/public_html/projects/mini_SF_AG.html
+++ b/public_html/projects/mini_SF_AG.html
@@ -48,7 +48,7 @@
     <div class="projectDescription">
         <div class="container">
         	<p>
-          		Got to do really fun things like put an Oscar Wilde quote in because I love Oscar Wilde.
+              I really enjoyed designing this graphic. I love visiting Europe, and a reason I moved to San Francisco is because it reminds me of Europe. So desinging a slide showing that San Francisco is full of culture, even compared to Europe, was really interesting. I got to add personal touches as well, which is always fun. I love reading, and Oscar Wilde is one of my favorite authors, so it was really fun including a quote by him.
         	</p>
       	</div>
     </div>
