--- a/public_html/projects/mini_US_AG.html
+++ b/public_html/projects/mini_US_AG.html
@@ -48,7 +48,7 @@
     <div class="projectDescription">
         <div class="container">
         	<p>
-          		description goes here for MINI US AG
+          		This was the first slide of two I made for the MINI Global pitch. I made the inforgraphic poster a few months prior, and so was asked to design these slides in a similar fashion. They ended up being used in the conclusion of the pitch and the business was won. This slide's purpose was to show that BSSP had a presence across all of the United States.
         	</p>
       	</div>
     </div>
