--- a/public_html/projects/presentingDataBssp.html
+++ b/public_html/projects/presentingDataBssp.html
@@ -48,7 +48,7 @@
     <div class="projectDescription">
         <div class="container">
         	<p>
-          		Describe project here
+          		I presented these slides for a few departments in an effort to transfer some of the principles I had been learning at the time to others. I was taking a data visualization course at Harvard, and had just attended a one day course by Edward Tufte. I thought some people would find some principles both classes tuahgt to be interesting and helpful.
         	</p>
       	</div>
     </div>
