--- a/public_html/blogposts/postSkeleton.html
+++ b/public_html/blogposts/postSkeleton.html
@@ -12,6 +12,7 @@
 	    <link href="../../roark/bootstrap/css/bootstrap.css" rel="stylesheet">
 	    <link href="../../roark/fontawesome/css/font-awesome.css" rel="stylesheet">
 	    <link href="../style.css" rel="stylesheet">
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700,900,500' rel='stylesheet' type='text/css'>
 	    <style type="text/css"></style>
 
 	    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
