last push from windows machine fri

--- a/public_html/blogposts/01_whybuilt.html
+++ b/public_html/blogposts/01_whybuilt.html
@@ -55,7 +55,7 @@
     <div class="blogPostBody">
         <div class="container">
         	<p>
-          		I have been working on D3 and Python for a while now on both my work and personal computers. Because of both of these reasons, some projects have been lost, others forgotten about. It's hard to remember all that has been done. I thought building a site to act as a sort of repository would help this problem I had. Solving problems is why we code. So I am going to use this site as a reference for future projects, and I hope others can as well. 
+          		I moved to San Francisco after college. I have had a few jobs and worked on many computers. On these computers and for these jobs I have been blessed to learn a lot. SQL and VBA were natural starting points. I went through a big Processing phase. I now find myself using Python and D3/JavaScript as my main tools. From those learnings, I output a lot of work; some rubbish and some I was super proud of. From the aforementioned work and computer transitions, a lot of my past output has been lost along the way. I thought it would be fun to build a central place for my work and thoughts, and so this site was born. Solving problems is why we code. I will see how effective this solution is. Hopefully I can use this as a tool and reference it in the future. I hope others can as well.
         	</p>
       	</div>
     </div>
